--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "lint": "turbo run lint",
         "typecheck": "turbo run typecheck",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "prepare": "husky"
+        "prepare": "husky",
+        "release": "qingniao",
+        "release:dry-run": "qingniao --dry-run"
     },
     "devDependencies": {
+        "@systembug/qingniao": "workspace:*",
         "turbo": "^2.3.3",
         "husky": "^9.1.7",
         "prettier": "^3.2.5",
