--- a/packages/@zouwu-wf/cli/tsconfig.json
+++ b/packages/@zouwu-wf/cli/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "commonjs",
+        "module": "ES2020",
         "lib": ["ES2020"],
         "outDir": "./dist",
         "rootDir": "./src",
@@ -13,7 +13,7 @@
         "declarationMap": true,
         "sourceMap": true,
         "resolveJsonModule": true,
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "typeRoots": [
             "../../../node_modules/@types",
             "../../node_modules/@types",
@@ -23,7 +23,9 @@
         "paths": {
             "*": ["../../../node_modules/*", "../../node_modules/*", "./node_modules/*"]
         },
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "allowImportingTsExtensions": false,
+        "noEmit": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
