style(qingniao): 统一代码格式，使用双引号
- 统一使用双引号替代单引号
- 格式化代码以符合项目规范

--- a/packages/@zouwu-wf/cli/package.json
+++ b/packages/@zouwu-wf/cli/package.json
@@ -35,9 +35,9 @@
     },
     "scripts": {
         "build": "vite build",
-        "test": "vitest",
-        "test:watch": "npx jest --watch",
-        "test:coverage": "npx jest --coverage",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "compile": "tsc",
         "lint": "eslint src/ --ext .ts",
         "format": "prettier --write src/ templates/",
