feat: 重命名 logger 为 diting 并在 qingniao 中集成
- 将 @systembug/logger 重命名为 @systembug/diting
- 在 diting README 中添加孟浩然《春晓》诗句及背景介绍
- 在 qingniao 中集成 diting 替换所有 console 日志调用
- 使用 diting 的 ConsoleTransport 进行彩色日志输出
- 为 qingniao 和 qingniao:cli 创建独立的 logger 实例
- 修复 lint 错误：移除不必要的 try/catch 和未使用的 chalk 导入

--- a/packages/@systembug/qingniao/tsconfig.json
+++ b/packages/@systembug/qingniao/tsconfig.json
@@ -14,7 +14,6 @@
         "sourceMap": true,
         "resolveJsonModule": true,
         "moduleResolution": "bundler",
-        "jsx": "react-jsx",
         "types": ["node"],
         "typeRoots": ["./node_modules/@types"],
         "baseUrl": ".",
@@ -22,7 +21,7 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*", "src/**/*.tsx"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "tests", "**/*.test.ts", "**/*.test.tsx"]
 }
 
