--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "@zouwu-wf/zouwu-workflow",
-  "version": "0.0.2",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "test": "turbo run test",
-    "lint": "turbo run lint",
-    "typecheck": "turbo run typecheck",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky",
-    "release": "qingniao",
-    "release:dry-run": "qingniao --dry-run"
-  },
-  "devDependencies": {
-    "@systembug/qingniao": "workspace:*",
-    "turbo": "^2.3.3",
-    "husky": "^9.1.7",
-    "prettier": "^3.2.5",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
-  },
-  "packageManager": "pnpm@9.0.0"
+    "name": "@zouwu-wf/zouwu-workflow",
+    "version": "0.0.2",
+    "private": true,
+    "scripts": {
+        "build": "turbo run build",
+        "test": "turbo run test",
+        "lint": "turbo run lint",
+        "typecheck": "turbo run typecheck",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "prepare": "husky",
+        "release": "qingniao",
+        "release:dry-run": "qingniao --dry-run"
+    },
+    "devDependencies": {
+        "@systembug/qingniao": "workspace:*",
+        "turbo": "^2.3.3",
+        "husky": "^9.1.7",
+        "prettier": "^3.2.5",
+        "eslint": "^8.57.0",
+        "typescript": "^5.3.3"
+    },
+    "packageManager": "pnpm@9.0.0",
+    "volta": {
+        "node": "22.10.0",
+        "pnpm": "9.0.0"
+    }
 }
