--- a/packages/@systembug/qingniao/package.json
+++ b/packages/@systembug/qingniao/package.json
@@ -49,13 +49,15 @@
     "prepublishOnly": "npm run typecheck && npm run build"
   },
   "dependencies": {
+    "@systembug/diting": "workspace:*",
     "chalk": "^4.1.2",
     "commander": "^9.5.0",
-    "ink": "^6.6.0",
+    "inquirer": "^13.1.0",
     "listr2": "^8.0.1",
-    "react": "^19.0.0"
+    "ora": "^9.0.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.9",
     "@types/node": "^18.0.0",
     "@types/react": "^19.0.0",
     "@vitejs/plugin-react": "^5.1.2",
