--- a/packages/@systembug/qingniao/package.json
+++ b/packages/@systembug/qingniao/package.json
@@ -70,6 +70,7 @@
     "vitest": "^1.0.0"
   },
   "peerDependencies": {
+    "@changesets/cli": "^2.0.0",
     "typescript": ">=4.0.0"
   },
   "engines": {
