fix: 为 scoped packages 添加 --access public 标志
- 修复 scoped packages（如 @zouwu-wf/*）发布时的 402 错误
- 自动检测 scoped packages（以 @ 开头的包名）
- 在发布和 dry-run 时自动添加 --access public 标志
- 确保 scoped packages 作为公共包发布到 NPM

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@zouwu-wf/zouwu-workflow",
+    "name": "zouwu-workflow",
     "version": "0.0.2",
     "private": true,
     "scripts": {
