fix: 修复工作流图形布局和 UI 闪烁问题
- 修复 yamlToGraph 中结束节点位置计算错误（3个节点时布局不正确）
- 移除导致闪烁的 setTimeout 和手动 fitView 调用
- 简化 WorkflowCanvas 组件，移除不必要的 UI 操作
- 更新为 Windows XP 主题样式
- 添加可调整大小的分割器组件，支持 Tree 和 Flow 视图调整
- 修复 Tree 组件数据结构，移除 _original 包装
- 修复 lint 警告（未使用的变量）

BREAKING CHANGE: Tree 组件内部数据结构变更

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "prepare": "husky",
         "release": "qingniao",
-        "release:dry-run": "qingniao --dry-run"
+        "release:dry-run": "qingniao --dry-run",
+        "design": "pnpm --filter @zouwu-wf/design dev",
+        "design:debug": "pnpm --filter @zouwu-wf/design dev:debug"
     },
     "devDependencies": {
         "@changesets/cli": "^2.29.8",
