feat: 实现 YAML 预览功能，使用 Monaco Editor
- 添加 Monaco Editor 用于 YAML 代码编辑和预览
- 创建 YamlPreviewModal 组件，支持语法高亮和只读模式
- 在 WorkflowCanvas 中添加预览 YAML 按钮功能
- 从服务器 API 获取原始 YAML 内容
- 配置 Vite 以支持 Monaco Editor
- 移除不再需要的 @ts-expect-error 指令

功能特性：
- 语法高亮（YAML）
- 代码折叠
- 行号显示
- 只读模式
- 响应式布局
- Windows XP 风格样式

--- a/packages/@zouwu-wf/design/package.json
+++ b/packages/@zouwu-wf/design/package.json
@@ -51,14 +51,16 @@
     "dependencies": {
         "@elysiajs/cors": "^1.1.0",
         "@elysiajs/static": "^1.1.0",
-        "@zouwu-wf/workflow": "workspace:*",
+        "@monaco-editor/react": "^4.7.0",
         "@zouwu-wf/components": "workspace:*",
         "@zouwu-wf/graph": "workspace:*",
+        "@zouwu-wf/workflow": "workspace:*",
         "chokidar": "^3.5.3",
         "commander": "^9.5.0",
         "elysia": "^1.1.0",
         "glob": "^13.0.0",
         "js-yaml": "^4.1.0",
+        "monaco-editor": "^0.55.1",
         "open": "^10.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -75,17 +77,18 @@
         "@types/node": "^18.19.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
-        "@vitejs/plugin-react": "^5.1.2",
-        "concurrently": "^9.2.1",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
+        "@vitejs/plugin-react": "^5.1.2",
+        "concurrently": "^9.2.1",
         "eslint": "^8.0.0",
         "eslint-plugin-react": "^7.33.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^3.0.0",
         "typescript": "^5.0.0",
         "vite": "^5.4.0",
-        "vite-plugin-dts": "^3.0.0"
+        "vite-plugin-dts": "^3.0.0",
+        "vite-plugin-monaco-editor": "^1.1.0"
     },
     "engines": {
         "bun": ">=1.0.0"
