chore: 迁移从 Turbo 到 Nx
- 安装并初始化 Nx 到现有 pnpm workspace
- 迁移 turbo.json 任务配置到 nx.json
- 更新 package.json scripts 从 turbo 改为 nx
- 删除 turbo.json 配置文件
- 移除 turbo 依赖
- 更新 .gitignore 添加 Nx 和 Turbo 忽略规则
  - .nx/cache, .nx/workspace-data, .nx/daemon
  - .turbo 和 **/.turbo（遗留缓存）
- 清理所有 Turbo 缓存目录

Nx 配置：
- build: 依赖上游构建，输出 dist/** 和 out/**
- test: 依赖 build，缓存输入 src/** 和 test/**
- lint: 启用缓存
- typecheck: 依赖上游 typecheck，启用缓存
- dev: 禁用缓存（持久任务）

所有任务已测试并正常工作

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,14 @@ guide
 .vitepress/cache
 .vitepress/dist
 
-# TurboRepo cache
+# TurboRepo cache (legacy, can be removed after migration)
 .turbo
+**/.turbo
+
+# Nx cache and workspace data
+.nx/cache
+.nx/workspace-data
+.nx/daemon
+
+# Generated files
 **/generated/*
