--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.0.7",
     "private": true,
     "scripts": {
-        "build": "turbo run build",
-        "test": "turbo run test",
-        "lint": "turbo run lint",
-        "typecheck": "turbo run typecheck",
+        "build": "nx run-many --target=build",
+        "test": "nx run-many --target=test",
+        "lint": "nx run-many --target=lint",
+        "typecheck": "nx run-many --target=typecheck",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "prepare": "husky",
         "release": "qingniao",
@@ -19,8 +19,8 @@
         "@systembug/qingniao": "^0.0.7",
         "eslint": "^8.57.0",
         "husky": "^9.1.7",
+        "nx": "^22.3.3",
         "prettier": "^3.2.5",
-        "turbo": "^2.3.3",
         "typescript": "^5.3.3"
     },
     "packageManager": "pnpm@9.0.0",
